# progwebIII_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Informações_Úteis.txt  PROBLEMA_RESOLVIDO.md  README.md  SOLUCOES_BCRYPT.md  database.py  docker-compose.yml  pyproject.toml  security.py  seed_db.py  test_create_user.py
app/: main.py
app/accounts/: controller.py  model.py  repository.py  service.py
app/auth/: controller.py  service.py
app/categories/: controller.py  model.py  repository.py  service.py
app/roles/: controller.py  model.py  repository.py  service.py
app/transactions/: controller.py  model.py  repository.py  service.py
app/transfers/: controller.py  model.py  repository.py  service.py
app/users/: controller.py  model.py  repository.py  service.py
